--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,32 @@
   font-family: 'Open Sans';
 }
 
-#adaLogo {
-  max-width: 150px;
-  padding: 5px;
-}
-
 header {
   display: flex;
   justify-content: left;
+}
+
+#adaLogo {
+  max-width: 150px;
+  padding: 10px;
+}
+
+#navbar {
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  margin-top: 10px;
+}
+
+.links {
+  padding: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #0AA3C2;
+}
+
+.links:hover {
+  color:#E80F5E;
 }
 
 main {
