--- a/src/components/ReservationForm.css
+++ b/src/components/ReservationForm.css
@@ -3,10 +3,8 @@
 }
 
 .column {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     flex: 50%;
     height: auto;
     min-height: 100vh;
-    justify-self: center;
 }
-
