--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,9 +1,8 @@
 .login {
-    height: 100vh;
-    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 50px;
 }
 
 .login__container {
