<ES&DR> ReservationList component; display current reservations sorted by date

--- a/src/components/ReservationForm.css
+++ b/src/components/ReservationForm.css
@@ -9,7 +9,13 @@
 .column {
     flex: 33.333%;
     height: auto;
-    min-height: 100vh;
+    min-height: 60vh;
+}
+
+#reservation-list {
+    height: 200px;
+    overflow-y: scroll;
+    overflow-x:hidden;
 }
 
 ul {
