--- a/src/components/UserDash.css
+++ b/src/components/UserDash.css
@@ -1,34 +1,38 @@
 .dashboard {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: flex;
   }
 
-.dashboard__container {
+.dashboard__column {
   flex: 50%;
   height: auto;
+  overflow-y: scroll;
+  overflow-x:hidden;
 }
 
 .dashboard__container {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: #dcdcdc;
-    padding: 30px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #dcdcdc;
+  padding: 30px;
+  width: 50%;
+  margin-left: 100px;
   }
 
 .dashboard__btn {
-    padding: 10px;
-    font-size: 18px;
-    margin-top: 10px;
-    border: none;
-    color: white;
-    background-color: black;
+  padding: 10px;
+  font-size: 18px;
+  margin-top: 10px;
+  border: none;
+  color: white;
+  background-color: black;
   }
 
 .dashboard div {
-    margin-top: 7px;
+  margin-top: 7px;
   }
