<ES&DR> Home pg doesn't display passed dates; User can delete reservations

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,11 @@ main ul {
   list-style-type: none;
 }
 
+p {
+  font-size: larger;
+  font-weight: bolder;
+}
+
 footer {
   background-color: #0F355E;
   color: white;
