--- a/src/components/ReservationForm.css
+++ b/src/components/ReservationForm.css
@@ -9,13 +9,15 @@
 .column {
     flex: 33.333%;
     height: auto;
-    min-height: 60vh;
+    min-height: 55vh;
+    margin-bottom: 50px;
 }
 
 #reservation-list {
     height: 200px;
     overflow-y: scroll;
     overflow-x:hidden;
+    margin-bottom: 50px;
 }
 
 ul {
@@ -29,4 +31,9 @@ ul {
 
 li {
     text-align: left;
+}
+
+/* Hide cancel button on Home page; NOT on User dash */
+#reservation-list #cancelButton {
+    display: none;
 }
