--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,12 @@ main {
 }
 
 main ul {
-  list-style-type: none;
+  list-style-type: none; 
+}
+
+li::before {
+  content: "🐾 ";
+  zoom: 1.25;
 }
 
 p {
