--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -1,33 +1,3 @@
-/* .react-datepicker {
-    font-family: "Helvetica Neue", helvetica, arial, sans-serif;
-    font-size: 0.8rem;
-    background-color: #fff;
-    color: #000;
-    border: 1px solid #aeaeae;
-    border-radius: 0.3rem;
-    display: inline-block;
-    position: relative;
-}
-
-.react-datepicker__header {
-    background-color: #F7B400;
-    border-bottom: 1px solid #aeaeae;
-}
-
-.react-datepicker__navigation {
-    color: hotpink;
-}
-
-.react-datepicker__today-button {
-    background: #f0f0f0;
-    border-top: 1px solid #aeaeae;
-    cursor: pointer;
-    text-align: center;
-    font-weight: bold;
-    padding: 5px 0;
-    clear: left;
-} */
-
 @charset "UTF-8";
 .react-datepicker__year-read-view--down-arrow,
 .react-datepicker__month-read-view--down-arrow,
@@ -107,7 +77,6 @@
   background-color: #fff;
   color: #000;
   border: 1px solid #aeaeae;
-  border-radius: 0.3rem;
   display: inline-block;
   position: relative;
 }
@@ -117,11 +86,6 @@
 }
 .react-datepicker--time-only .react-datepicker__time-container {
   border-left: 0;
-}
-.react-datepicker--time-only .react-datepicker__time,
-.react-datepicker--time-only .react-datepicker__time-box {
-  border-bottom-left-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem;
 }
 
 .react-datepicker__triangle {
@@ -161,7 +125,7 @@
   text-align: center;
   background-color: #E80F5E;
   border-bottom: 1px solid #aeaeae;
-  border-top-left-radius: 0.3rem;
+  /* border-top-left-radius: 0.3rem; */
   padding: 8px 0;
   position: relative;
 }
@@ -169,12 +133,6 @@
   padding-bottom: 8px;
   padding-left: 5px;
   padding-right: 5px;
-}
-.react-datepicker__header--time:not(.react-datepicker__header--time--only) {
-  border-top-left-radius: 0;
-}
-.react-datepicker__header:not(.react-datepicker__header--has-time-select) {
-  border-top-right-radius: 0.3rem;
 }
 
 .react-datepicker__year-dropdown-container--select,
@@ -268,7 +226,7 @@
 
 .react-datepicker__month-container {
   float: left;
-  box-shadow: 25px 25px #F7B400;
+  box-shadow: 10px 10px #F7B400;
 }
 
 .react-datepicker__year {
@@ -338,7 +296,6 @@
 .react-datepicker__time-container--with-today-button {
   display: inline;
   border: 1px solid #aeaeae;
-  border-radius: 0.3rem;
   position: absolute;
   right: -72px;
   top: 0;
@@ -346,14 +303,12 @@
 .react-datepicker__time-container .react-datepicker__time {
   position: relative;
   background: white;
-  border-bottom-right-radius: 0.3rem;
 }
 .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box {
   width: 85px;
   overflow-x: hidden;
   margin: 0 auto;
   text-align: center;
-  border-bottom-right-radius: 0.3rem;
 }
 .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list {
   list-style: none;
@@ -375,12 +330,12 @@
   background-color: #f0f0f0;
 }
 .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list li.react-datepicker__time-list-item--selected {
-  background-color: #216ba5;
+  background-color: #0AA3C2;
   color: white;
   font-weight: bold;
 }
 .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list li.react-datepicker__time-list-item--selected:hover {
-  background-color: #216ba5;
+  background-color: #0AA3C2;
 }
 .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list li.react-datepicker__time-list-item--disabled {
   color: #ccc;
@@ -402,7 +357,6 @@
   cursor: pointer;
 }
 .react-datepicker__week-number.react-datepicker__week-number--clickable:hover {
-  border-radius: 0.3rem;
   background-color: #f0f0f0;
 }
 
@@ -438,7 +392,6 @@
 .react-datepicker__quarter--selected,
 .react-datepicker__quarter--in-selecting-range,
 .react-datepicker__quarter--in-range {
-  border-radius: 0.3rem;
   background-color: #0AA3C2;
   color: #fff;
 }
@@ -469,41 +422,13 @@
 .react-datepicker__month-text:hover,
 .react-datepicker__quarter-text:hover,
 .react-datepicker__year-text:hover {
-  border-radius: 0.3rem;
   background-color: #f0f0f0;
 }
-.react-datepicker__day--today,
-.react-datepicker__month-text--today,
-.react-datepicker__quarter-text--today,
-.react-datepicker__year-text--today {
+.react-datepicker__day--today {
   font-weight: bold;
+  background-color: #f0f0f0;
 }
-.react-datepicker__day--highlighted,
-.react-datepicker__month-text--highlighted,
-.react-datepicker__quarter-text--highlighted,
-.react-datepicker__year-text--highlighted {
-  border-radius: 0.3rem;
-  background-color: #3dcc4a;
-  color: #fff;
-}
-.react-datepicker__day--highlighted:hover,
-.react-datepicker__month-text--highlighted:hover,
-.react-datepicker__quarter-text--highlighted:hover,
-.react-datepicker__year-text--highlighted:hover {
-  background-color: #32be3f;
-}
-.react-datepicker__day--highlighted-custom-1,
-.react-datepicker__month-text--highlighted-custom-1,
-.react-datepicker__quarter-text--highlighted-custom-1,
-.react-datepicker__year-text--highlighted-custom-1 {
-  color: magenta;
-}
-.react-datepicker__day--highlighted-custom-2,
-.react-datepicker__month-text--highlighted-custom-2,
-.react-datepicker__quarter-text--highlighted-custom-2,
-.react-datepicker__year-text--highlighted-custom-2 {
-  color: green;
-}
+
 .react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range,
 .react-datepicker__month-text--selected,
 .react-datepicker__month-text--in-selecting-range,
@@ -514,7 +439,7 @@
 .react-datepicker__year-text--selected,
 .react-datepicker__year-text--in-selecting-range,
 .react-datepicker__year-text--in-range {
-  border-radius: 0.3rem;
+
   background-color: #0AA3C2;
   color: #fff;
 }
@@ -528,22 +453,9 @@
 .react-datepicker__year-text--selected:hover,
 .react-datepicker__year-text--in-selecting-range:hover,
 .react-datepicker__year-text--in-range:hover {
-  background-color: #1d5d90;
+  background-color: #0AA3C2;
 }
-.react-datepicker__day--keyboard-selected,
-.react-datepicker__month-text--keyboard-selected,
-.react-datepicker__quarter-text--keyboard-selected,
-.react-datepicker__year-text--keyboard-selected {
-  border-radius: 0.3rem;
-  background-color: #2579ba;
-  color: #fff;
-}
-.react-datepicker__day--keyboard-selected:hover,
-.react-datepicker__month-text--keyboard-selected:hover,
-.react-datepicker__quarter-text--keyboard-selected:hover,
-.react-datepicker__year-text--keyboard-selected:hover {
-  background-color: #1d5d90;
-}
+
 .react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range,
 .react-datepicker__month-text--in-range,
 .react-datepicker__quarter-text--in-range,
@@ -560,7 +472,7 @@
 .react-datepicker__month-text--in-range,
 .react-datepicker__quarter-text--in-range,
 .react-datepicker__year-text--in-range) {
-  background-color: rgba(33, 107, 165, 0.5);
+  background-color: #0AA3C2;
 }
 .react-datepicker__month--selecting-range .react-datepicker__day--in-range:not(.react-datepicker__day--in-selecting-range,
 .react-datepicker__month-text--in-selecting-range,
@@ -600,7 +512,7 @@
 .react-datepicker__quarter-text.react-datepicker__month--in-range:hover,
 .react-datepicker__quarter-text.react-datepicker__quarter--selected:hover,
 .react-datepicker__quarter-text.react-datepicker__quarter--in-range:hover {
-  background-color: #216ba5;
+  background-color: #0AA3C2;
 }
 .react-datepicker__month-text:hover,
 .react-datepicker__quarter-text:hover {
@@ -617,7 +529,6 @@
 .react-datepicker__month-read-view,
 .react-datepicker__month-year-read-view {
   border: 1px solid transparent;
-  border-radius: 0.3rem;
   position: relative;
 }
 .react-datepicker__year-read-view:hover,
@@ -651,7 +562,6 @@
   top: 30px;
   z-index: 1;
   text-align: center;
-  border-radius: 0.3rem;
   border: 1px solid #aeaeae;
 }
 .react-datepicker__year-dropdown:hover,
@@ -675,12 +585,7 @@
   margin-left: auto;
   margin-right: auto;
 }
-.react-datepicker__year-option:first-of-type,
-.react-datepicker__month-option:first-of-type,
-.react-datepicker__month-year-option:first-of-type {
-  border-top-left-radius: 0.3rem;
-  border-top-right-radius: 0.3rem;
-}
+
 .react-datepicker__year-option:last-of-type,
 .react-datepicker__month-option:last-of-type,
 .react-datepicker__month-year-option:last-of-type {
@@ -688,8 +593,6 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  border-bottom-left-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem;
 }
 .react-datepicker__year-option:hover,
 .react-datepicker__month-option:hover,
@@ -728,9 +631,8 @@
 }
 .react-datepicker__close-icon::after {
   cursor: pointer;
-  background-color: #216ba5;
+  background-color: #0AA3C2;
   color: #fff;
-  border-radius: 50%;
   height: 16px;
   width: 16px;
   padding: 2px;
