--- a/src/components/Reservation.css
+++ b/src/components/Reservation.css
@@ -5,3 +5,11 @@
     margin: 25px;
     box-shadow: 10px 10px #E80F5E;
 }
+
+#cancelButton {
+    background-color: #0AA3C2;
+}
+
+#cancelButton:hover {
+    background-color: red;
+}
