--- a/src/components/UserDash.css
+++ b/src/components/UserDash.css
@@ -18,10 +18,12 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: #dcdcdc;
+  background-color: #0F355E;
+  color: white;
   padding: 30px;
   width: 50%;
   margin-left: 100px;
+  box-shadow: 10px 10px #F7B400;
   }
 
 .dashboard__btn {
@@ -30,7 +32,7 @@
   margin-top: 10px;
   border: none;
   color: white;
-  background-color: black;
+  background-color: #0AA3C2;
   }
 
 .dashboard div {
