--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-/* .app, header, footer {
-  border: 1px solid red;
-} */
-
 .App {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -12,6 +8,7 @@
 header {
   display: flex;
   justify-content: left;
+  /* position: fixed; */
 }
 
 #adaLogo {
@@ -50,7 +47,7 @@ main ul {
 }
 
 li::before {
-  content: "🐾 ";
+  /* content: "🐾 "; */
   zoom: 1.25;
 }
 
