--- a/src/components/ReservationForm.css
+++ b/src/components/ReservationForm.css
@@ -1,33 +1,31 @@
-/* #reservationForm, .row, .column, ul, li {
-    border: 1px solid red;
-} */
-
 .row {
     display: flex;
 }
 
 .column {
-    flex: 33.333%;
+    flex: 50%;
     height: auto;
-    min-height: 55vh;
-    margin-bottom: 50px;
+    margin: 25px;
 }
 
 #reservation-list {
-    height: 200px;
+    height: auto;
     overflow-y: scroll;
     overflow-x:hidden;
-    margin-bottom: 50px;
 }
 
 ul {
     display:-moz-inline-stack;
-    display:inline-block;
     zoom:1;
     *display:inline;
     text-align: center;
     margin-bottom: 50px;
 }
+
+.reservation-rules li::before {
+    content: "🐾 ";
+    zoom: 1.25;
+  }
 
 li {
     text-align: left;
@@ -43,11 +41,11 @@ h3 {
 }
 
 #calendarContainer {
-    zoom: 1.25;
+    zoom: 1.90;
     margin: 25px;
 }
 
-/* TESTING */
+/* FORM STYLE */
 select {
   background-color: #0AA3C2;
   background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20256%20448%22%20enable-background%3D%22new%200%200%20256%20448%22%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E.arrow%7Bfill%3A@{arrow}%3B%7D%3C%2Fstyle%3E%3Cpath%20class%3D%22arrow%22%20d%3D%22M255.9%20168c0-4.2-1.6-7.9-4.8-11.2-3.2-3.2-6.9-4.8-11.2-4.8H16c-4.2%200-7.9%201.6-11.2%204.8S0%20163.8%200%20168c0%204.4%201.6%208.2%204.8%2011.4l112%20112c3.1%203.1%206.8%204.6%2011.2%204.6%204.4%200%208.2-1.5%2011.4-4.6l112-112c3-3.2%204.5-7%204.5-11.4z%22%2F%3E%3C%2Fsvg%3E%0A);
