--- a/src/components/UserDash.css
+++ b/src/components/UserDash.css
@@ -1,13 +1,3 @@
-/* .dashboard {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  border: 5px dashed green;
-  } */
-
 .dashboard__column {
   flex: 50%;
   height: 75vh;
@@ -16,7 +6,6 @@
 }
 
 .logout-column {
-  /* border: 2px dashed blueviolet; */
   position: relative;
 
 }
@@ -35,18 +24,10 @@
   top: 50%;
   transform: translateY(-50%) translateX(45%);
 
-  /* margin-left: 100px; */
-  /* white-space: pre-line; */
-  /* overflow-wrap: break-word; */
-
   word-break: break-all;
   
-  /* text-align: center; */
-  /* justify-content: center; */
   box-shadow: 10px 10px #F7B400;
-  border: 2px dashed blueviolet;
   }
-
 
 .dashboard__btn {
   padding: 10px;
@@ -57,6 +38,6 @@
   background-color: #0AA3C2;
   }
 
-.dashboard div {
-  margin-top: 7px;
+  .dashboard__btn:hover {
+    background-color: #e7175f;
   }
