--- a/src/components/UserDash.css
+++ b/src/components/UserDash.css
@@ -33,6 +33,7 @@
   padding: 10px;
   font-size: 18px;
   margin-top: 10px;
+  border-radius: 2.5px 2.5px 2.5px 2.5px;
   border: none;
   color: white;
   background-color: #0AA3C2;
