--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -1,15 +1,9 @@
 /* NOTE: Copy/paste & edited from default datepicker stylesheet react-datepicker.css */
 @charset "UTF-8";
-.react-datepicker__navigation-icon::before {
-  border-color: #fff;
-  border-style: solid;
-  border-width: 3px 3px 0 0;
-  content: "";
-  display: block;
-  height: 9px;
-  position: absolute;
-  top: 6px;
-  width: 9px;
+
+#calendarContainer {
+  margin: 25px;
+  zoom: 1.40;
 }
 
 .react-datepicker-wrapper {
@@ -17,11 +11,10 @@
   display: relative;
   padding: 0;
   border: 0;
-  width: 100%;
 }
 
 .react-datepicker {
-  font-size: 0.8rem;
+  font-size: 0.8em;
   background-color: #fff;
   color: #000;
   border: 1px solid #E80F5E;
@@ -36,13 +29,14 @@
   border-bottom: 1px solid #E80F5E;
   padding: 8px 0;
   position: relative;
+  width: 100%;
 }
 
 .react-datepicker__current-month {
   margin-top: 0;
   color: #fff;
   font-weight: bold;
-  font-size: 0.944rem;
+  font-size: 0.944em;
 }
 
 .react-datepicker__navigation {
@@ -78,6 +72,17 @@
   font-size: 20px;
   width: 0;
 }
+.react-datepicker__navigation-icon::before {
+  border-color: #fff;
+  border-style: solid;
+  border-width: 3px 3px 0 0;
+  content: "";
+  display: block;
+  height: 9px;
+  position: absolute;
+  top: 6px;
+  width: 9px;
+}
 .react-datepicker__navigation-icon--next {
   left: -2px;
 }
@@ -98,12 +103,12 @@
 }
 
 .react-datepicker__month {
-  margin: 0.4rem;
+  margin: 0.4em;
   text-align: center;
 }
 .react-datepicker__month .react-datepicker__month-text {
   display: inline-block;
-  width: 4rem;
+  width: 4em;
   margin: 2px;
 }
 
@@ -119,19 +124,19 @@
 .react-datepicker__day-name {
     color: #fff;
     display: inline-block;
-    width: 1.7rem;
-    line-height: 1.7rem;
+    width: 1.7em;
+    line-height: 1.7em;
     text-align: center;
-    margin: 0.166rem;
+    margin: 0.166em;
 }
 
 .react-datepicker__day {
   color: #000;
   display: inline-block;
-  width: 1.7rem;
-  line-height: 1.7rem;
+  width: 1.7em;
+  line-height: 1.7em;
   text-align: center;
-  margin: 0.166rem;
+  margin: 0.166em;
 }
 
 .react-datepicker__day:hover {
@@ -162,11 +167,11 @@
   .react-datepicker__portal .react-datepicker__day-name,
 .react-datepicker__portal .react-datepicker__day,
 .react-datepicker__portal .react-datepicker__time-name {
-    width: 2rem;
-    line-height: 2rem;
+    width: 2em;
+    line-height: 2em;
   }
 }
 .react-datepicker__portal .react-datepicker__current-month,
 .react-datepicker__portal .react-datepicker-time__header {
-  font-size: 1.44rem;
+  font-size: 1.44em;
 }
