Titles to h4, Added C18 emojis

--- a/src/components/ReservationForm.css
+++ b/src/components/ReservationForm.css
@@ -37,8 +37,9 @@ li {
     text-align: left;
 }
 
-h3 {
+h4 {
     margin: 0;
+    color: black;
 }
 
 /* Hide cancel button on Home page; NOT on User dash */
