--- a/src/components/ReservationForm.css
+++ b/src/components/ReservationForm.css
@@ -1,11 +1,12 @@
 .row {
     display: block;
-    height: 75vh;
-    border: 3px dashed green;
+    border: none;
+    /* height: 75vh; */
+    /* border: 3px dashed green; */
 }
 
 .col {
-  border: 3px dotted red;
+  border: none;
   max-width: 100vh;
   max-height: 100vh;
 }
@@ -42,6 +43,10 @@ h4 {
     color: black;
 }
 
+p {
+  color: #e7175f;
+}
+
 /* Hide cancel button on Home page; NOT on User dash */
 #reservation-list #cancelButton {
     display: none;
@@ -53,10 +58,6 @@ h4 {
   flex-direction: column;
   align-items: stretch;
   width: 10%;
-  /* flex-grow: 1; */
-  /* position: absolute;
-  top: 50%;
-  transform: translateY(-50%) translateX(45%); */
 }
 
 /* FORM STYLE */
